plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies { // Spring Boot 기본 및 웹 관련 의존성
    implementation 'org.springframework.boot:spring-boot-starter-web'               // Spring Web MVC
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'          // Thymeleaf 템플릿 엔진
    implementation 'org.springframework.boot:spring-boot-starter-actuator'           // 애플리케이션 모니터링과 관리
    implementation 'org.springframework.boot:spring-boot-starter-validation'         // 데이터 검증

    // 데이터베이스 관련 의존성
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'           // JPA 데이터베이스
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'        // MongoDB 데이터베이스
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive' // MongoDB 리액티브

    // 보안 관련 의존성
    implementation 'org.springframework.boot:spring-boot-starter-security'           // Spring Security
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'            // Thymeleaf + Spring Security
    implementation 'io.jsonwebtoken:jjwt:0.9.1'                                      // JWT 토큰 관리

    // Jackson 관련 의존성
    implementation 'com.fasterxml.jackson.core:jackson-databind'                     // JSON 데이터 바인딩
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'          // Java 8 시간 지원

    // JAXB dependencies for Java 9+
    implementation 'javax.xml.bind:jaxb-api:2.3.1'
    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.3'

    // 테스트 관련 의존성
    testImplementation 'org.springframework.boot:spring-boot-starter-test'           // Spring Boot 테스트
    testImplementation 'io.projectreactor:reactor-test'                              // 리액티브 스트림 테스트
    testImplementation 'org.springframework.security:spring-security-test'           // Spring Security 테스트

    // 기타 의존성
    implementation 'javax.annotation:javax.annotation-api:1.3.2'                     // 자바 표준 주석 지원
    compileOnly 'org.projectlombok:lombok:1.18.22'                                   // Lombok - 컴파일 시 자동 코드 생성
    annotationProcessor 'org.projectlombok:lombok:1.18.22'                           // Lombok 애노테이션 프로세서

    implementation 'net.nurigo:javaSDK:2.2'
    implementation 'net.nurigo:sdk:4.3.0'                                            // 문자 인증
}

tasks.named('test') {
    useJUnitPlatform()
}
